@@ -13,10 +13,6 @@ dps:
         opstatus_reconf: false
         native_vlan: 100
         acl_in: 1
-      1:
-        native_vlan: 100
-        name: TOUIX
-        acl_in: 1
       2:
         native_vlan: 100
         name: FullSave
@@ -36,10 +32,6 @@ dps:
       6:
         native_vlan: 100
         name: LyonIX
-        acl_in: 1
-      8:
-        native_vlan: 100
-        name: TOUIX
         acl_in: 1
       9:
         native_vlan: 100
@@ -66,6 +58,10 @@ dps:
       1:
         native_vlan: 100
         name: Aza telecom
+        acl_in: 2
+      3:
+        native_vlan: 100
+        name: test
         acl_in: 2
   Edge3-Cogent:
     dp_id: 3
@@ -95,26 +91,6 @@ vlans:
     description: FAUCET
 acls:
   1:
-  - rule:
-      dl_type: '0x806'
-      dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.1"
-      actions:
-        output:
-          port: 1
-  - rule:
-      dl_type: '0x86DD'
-      ip_proto: 58
-      icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:7184:1"
-      actions:
-        output:
-          port: 1
-  - rule:
-      dl_dst: "84:2b:2b:73:06:7e"
-      actions:
-        output:
-          port: 1
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
@@ -215,26 +191,6 @@ acls:
       actions:
         output:
           port: 6
-  - rule:
-      dl_type: '0x806'
-      dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.2"
-      actions:
-        output:
-          port: 8
-  - rule:
-      dl_type: '0x86DD'
-      ip_proto: 58
-      icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:7184:2"
-      actions:
-        output:
-          port: 8
-  - rule:
-      dl_dst: "00:26:b9:89:b6:84"
-      actions:
-        output:
-          port: 8
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
@@ -310,39 +266,39 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.12"
+      arp_tpa: "91.213.236.3"
       actions:
         output:
           failover:
             group_id: 4
             ports:
-            - 28
             - 25
+            - 28
   - rule:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:8072:1"
+      ipv6_nd_target: "2001:7f8:68::19:7492:2"
       actions:
         output:
           failover:
             group_id: 5
             ports:
-            - 28
             - 25
+            - 28
   - rule:
-      dl_dst: "08:81:f4:8c:1f:e0"
+      dl_dst: "00:00:00:00:00:01"
       actions:
         output:
           failover:
             group_id: 6
             ports:
-            - 28
             - 25
+            - 28
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.23"
+      arp_tpa: "91.213.236.12"
       actions:
         output:
           failover:
@@ -354,7 +310,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::19:7492:1"
+      ipv6_nd_target: "2001:7f8:68::4:8072:1"
       actions:
         output:
           failover:
@@ -363,11 +319,43 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "00:25:83:b0:34:1b"
+      dl_dst: "08:81:f4:8c:1f:e0"
       actions:
         output:
           failover:
             group_id: 9
+            ports:
+            - 28
+            - 25
+  - rule:
+      dl_type: '0x806'
+      dl_dst: "ff:ff:ff:ff:ff:ff"
+      arp_tpa: "91.213.236.23"
+      actions:
+        output:
+          failover:
+            group_id: 10
+            ports:
+            - 28
+            - 25
+  - rule:
+      dl_type: '0x86DD'
+      ip_proto: 58
+      icmpv6_type: 135
+      ipv6_nd_target: "2001:7f8:68::19:7492:1"
+      actions:
+        output:
+          failover:
+            group_id: 11
+            ports:
+            - 28
+            - 25
+  - rule:
+      dl_dst: "00:25:83:b0:34:1b"
+      actions:
+        output:
+          failover:
+            group_id: 12
             ports:
             - 28
             - 25
@@ -395,7 +383,27 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.1"
+      arp_tpa: "91.213.236.3"
+      actions:
+        output:
+          port: 3
+  - rule:
+      dl_type: '0x86DD'
+      ip_proto: 58
+      icmpv6_type: 135
+      ipv6_nd_target: "2001:7f8:68::19:7492:2"
+      actions:
+        output:
+          port: 3
+  - rule:
+      dl_dst: "00:00:00:00:00:01"
+      actions:
+        output:
+          port: 3
+  - rule:
+      dl_type: '0x806'
+      dl_dst: "ff:ff:ff:ff:ff:ff"
+      arp_tpa: "91.213.236.15"
       actions:
         output:
           failover:
@@ -407,7 +415,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:7184:1"
+      ipv6_nd_target: "2001:7f8:68::3:9405:1"
       actions:
         output:
           failover:
@@ -416,7 +424,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "84:2b:2b:73:06:7e"
+      dl_dst: "08:b2:58:99:e4:0b"
       actions:
         output:
           failover:
@@ -427,7 +435,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.15"
+      arp_tpa: "91.213.236.22"
       actions:
         output:
           failover:
@@ -439,7 +447,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::3:9405:1"
+      ipv6_nd_target: "2001:7f8:68::1:6347:1"
       actions:
         output:
           failover:
@@ -448,7 +456,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "08:b2:58:99:e4:0b"
+      dl_dst: "00:0b:fc:57:5c:1b"
       actions:
         output:
           failover:
@@ -459,7 +467,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.22"
+      arp_tpa: "91.213.236.24"
       actions:
         output:
           failover:
@@ -471,7 +479,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::1:6347:1"
+      ipv6_nd_target: "2001:7f8:68::20:6059:1"
       actions:
         output:
           failover:
@@ -480,7 +488,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "00:0b:fc:57:5c:1b"
+      dl_dst: "fc:ec:da:05:ef:72"
       actions:
         output:
           failover:
@@ -491,7 +499,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.24"
+      arp_tpa: "91.213.236.14"
       actions:
         output:
           failover:
@@ -503,7 +511,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::20:6059:1"
+      ipv6_nd_target: "2001:7f8:68::19:7422:1"
       actions:
         output:
           failover:
@@ -512,7 +520,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "fc:ec:da:05:ef:72"
+      dl_dst: "90:e2:ba:20:b7:5c"
       actions:
         output:
           failover:
@@ -523,7 +531,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.14"
+      arp_tpa: "91.213.236.13"
       actions:
         output:
           failover:
@@ -535,7 +543,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::19:7422:1"
+      ipv6_nd_target: "2001:7f8:68::4:3100:1"
       actions:
         output:
           failover:
@@ -544,7 +552,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "90:e2:ba:20:b7:5c"
+      dl_dst: "70:e4:22:06:8c:7b"
       actions:
         output:
           failover:
@@ -555,7 +563,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.13"
+      arp_tpa: "91.213.236.25"
       actions:
         output:
           failover:
@@ -567,7 +575,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:3100:1"
+      ipv6_nd_target: "2001:7f8:68::4:1652:1"
       actions:
         output:
           failover:
@@ -576,7 +584,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "70:e4:22:06:8c:7b"
+      dl_dst: "b0:fa:eb:15:72:c0"
       actions:
         output:
           failover:
@@ -587,7 +595,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.2"
+      arp_tpa: "91.213.236.26"
       actions:
         output:
           failover:
@@ -599,7 +607,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:7184:2"
+      ipv6_nd_target: "2001:7f8:68::4:1111:1"
       actions:
         output:
           failover:
@@ -608,7 +616,7 @@ acls:
             - 25
             - 26
   - rule:
-      dl_dst: "00:26:b9:89:b6:84"
+      dl_dst: "00:25:90:79:4d:5d"
       actions:
         output:
           failover:
@@ -619,75 +627,11 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.25"
-      actions:
-        output:
-          failover:
-            group_id: 1022
-            ports:
-            - 25
-            - 26
-  - rule:
-      dl_type: '0x86DD'
-      ip_proto: 58
-      icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:1652:1"
-      actions:
-        output:
-          failover:
-            group_id: 1023
-            ports:
-            - 25
-            - 26
-  - rule:
-      dl_dst: "b0:fa:eb:15:72:c0"
-      actions:
-        output:
-          failover:
-            group_id: 1024
-            ports:
-            - 25
-            - 26
-  - rule:
-      dl_type: '0x806'
-      dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.26"
-      actions:
-        output:
-          failover:
-            group_id: 1025
-            ports:
-            - 25
-            - 26
-  - rule:
-      dl_type: '0x86DD'
-      ip_proto: 58
-      icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:1111:1"
-      actions:
-        output:
-          failover:
-            group_id: 1026
-            ports:
-            - 25
-            - 26
-  - rule:
-      dl_dst: "00:25:90:79:4d:5d"
-      actions:
-        output:
-          failover:
-            group_id: 1027
-            ports:
-            - 25
-            - 26
-  - rule:
-      dl_type: '0x806'
-      dl_dst: "ff:ff:ff:ff:ff:ff"
       arp_tpa: "91.213.236.12"
       actions:
         output:
           failover:
-            group_id: 1028
+            group_id: 1022
             ports:
             - 26
             - 25
@@ -699,7 +643,7 @@ acls:
       actions:
         output:
           failover:
-            group_id: 1029
+            group_id: 1023
             ports:
             - 26
             - 25
@@ -708,7 +652,7 @@ acls:
       actions:
         output:
           failover:
-            group_id: 1030
+            group_id: 1024
             ports:
             - 26
             - 25
@@ -719,7 +663,7 @@ acls:
       actions:
         output:
           failover:
-            group_id: 1031
+            group_id: 1025
             ports:
             - 26
             - 25
@@ -731,7 +675,7 @@ acls:
       actions:
         output:
           failover:
-            group_id: 1032
+            group_id: 1026
             ports:
             - 26
             - 25
@@ -740,7 +684,7 @@ acls:
       actions:
         output:
           failover:
-            group_id: 1033
+            group_id: 1027
             ports:
             - 26
             - 25
@@ -788,7 +732,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.1"
+      arp_tpa: "91.213.236.15"
       actions:
         output:
           failover:
@@ -800,7 +744,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:7184:1"
+      ipv6_nd_target: "2001:7f8:68::3:9405:1"
       actions:
         output:
           failover:
@@ -809,7 +753,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "84:2b:2b:73:06:7e"
+      dl_dst: "08:b2:58:99:e4:0b"
       actions:
         output:
           failover:
@@ -820,7 +764,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.15"
+      arp_tpa: "91.213.236.22"
       actions:
         output:
           failover:
@@ -832,7 +776,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::3:9405:1"
+      ipv6_nd_target: "2001:7f8:68::1:6347:1"
       actions:
         output:
           failover:
@@ -841,7 +785,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "08:b2:58:99:e4:0b"
+      dl_dst: "00:0b:fc:57:5c:1b"
       actions:
         output:
           failover:
@@ -852,7 +796,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.22"
+      arp_tpa: "91.213.236.24"
       actions:
         output:
           failover:
@@ -864,7 +808,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::1:6347:1"
+      ipv6_nd_target: "2001:7f8:68::20:6059:1"
       actions:
         output:
           failover:
@@ -873,7 +817,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "00:0b:fc:57:5c:1b"
+      dl_dst: "fc:ec:da:05:ef:72"
       actions:
         output:
           failover:
@@ -884,7 +828,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.24"
+      arp_tpa: "91.213.236.14"
       actions:
         output:
           failover:
@@ -896,7 +840,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::20:6059:1"
+      ipv6_nd_target: "2001:7f8:68::19:7422:1"
       actions:
         output:
           failover:
@@ -905,7 +849,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "fc:ec:da:05:ef:72"
+      dl_dst: "90:e2:ba:20:b7:5c"
       actions:
         output:
           failover:
@@ -916,7 +860,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.14"
+      arp_tpa: "91.213.236.13"
       actions:
         output:
           failover:
@@ -928,7 +872,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::19:7422:1"
+      ipv6_nd_target: "2001:7f8:68::4:3100:1"
       actions:
         output:
           failover:
@@ -937,7 +881,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "90:e2:ba:20:b7:5c"
+      dl_dst: "70:e4:22:06:8c:7b"
       actions:
         output:
           failover:
@@ -948,7 +892,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.13"
+      arp_tpa: "91.213.236.25"
       actions:
         output:
           failover:
@@ -960,7 +904,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:3100:1"
+      ipv6_nd_target: "2001:7f8:68::4:1652:1"
       actions:
         output:
           failover:
@@ -969,7 +913,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "70:e4:22:06:8c:7b"
+      dl_dst: "b0:fa:eb:15:72:c0"
       actions:
         output:
           failover:
@@ -980,7 +924,7 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.2"
+      arp_tpa: "91.213.236.26"
       actions:
         output:
           failover:
@@ -992,7 +936,7 @@ acls:
       dl_type: '0x86DD'
       ip_proto: 58
       icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:7184:2"
+      ipv6_nd_target: "2001:7f8:68::4:1111:1"
       actions:
         output:
           failover:
@@ -1001,7 +945,7 @@ acls:
             - 28
             - 25
   - rule:
-      dl_dst: "00:26:b9:89:b6:84"
+      dl_dst: "00:25:90:79:4d:5d"
       actions:
         output:
           failover:
@@ -1012,75 +956,11 @@ acls:
   - rule:
       dl_type: '0x806'
       dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.25"
-      actions:
-        output:
-          failover:
-            group_id: 2022
-            ports:
-            - 28
-            - 25
-  - rule:
-      dl_type: '0x86DD'
-      ip_proto: 58
-      icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:1652:1"
-      actions:
-        output:
-          failover:
-            group_id: 2023
-            ports:
-            - 28
-            - 25
-  - rule:
-      dl_dst: "b0:fa:eb:15:72:c0"
-      actions:
-        output:
-          failover:
-            group_id: 2024
-            ports:
-            - 28
-            - 25
-  - rule:
-      dl_type: '0x806'
-      dl_dst: "ff:ff:ff:ff:ff:ff"
-      arp_tpa: "91.213.236.26"
-      actions:
-        output:
-          failover:
-            group_id: 2025
-            ports:
-            - 28
-            - 25
-  - rule:
-      dl_type: '0x86DD'
-      ip_proto: 58
-      icmpv6_type: 135
-      ipv6_nd_target: "2001:7f8:68::4:1111:1"
-      actions:
-        output:
-          failover:
-            group_id: 2026
-            ports:
-            - 28
-            - 25
-  - rule:
-      dl_dst: "00:25:90:79:4d:5d"
-      actions:
-        output:
-          failover:
-            group_id: 2027
-            ports:
-            - 28
-            - 25
-  - rule:
-      dl_type: '0x806'
-      dl_dst: "ff:ff:ff:ff:ff:ff"
       arp_tpa: "91.213.236.20"
       actions:
         output:
           failover:
-            group_id: 2028
+            group_id: 2022
             ports:
             - 25
             - 28
@@ -1092,7 +972,7 @@ acls:
       actions:
         output:
           failover:
-            group_id: 2029
+            group_id: 2023
             ports:
             - 25
             - 28
@@ -1101,7 +981,39 @@ acls:
       actions:
         output:
           failover:
-            group_id: 2030
+            group_id: 2024
+            ports:
+            - 25
+            - 28
+  - rule:
+      dl_type: '0x806'
+      dl_dst: "ff:ff:ff:ff:ff:ff"
+      arp_tpa: "91.213.236.3"
+      actions:
+        output:
+          failover:
+            group_id: 2025
+            ports:
+            - 25
+            - 28
+  - rule:
+      dl_type: '0x86DD'
+      ip_proto: 58
+      icmpv6_type: 135
+      ipv6_nd_target: "2001:7f8:68::19:7492:2"
+      actions:
+        output:
+          failover:
+            group_id: 2026
+            ports:
+            - 25
+            - 28
+  - rule:
+      dl_dst: "00:00:00:00:00:01"
+      actions:
+        output:
+          failover:
+            group_id: 2027
             ports:
             - 25
             - 28
