@@ -1,0 +1,3 @@
+#!/bin/bash
+cd `dirname "$0"`
+docker-compose run mixtt . &> output.txt
