@@ -1,6 +1,9 @@
 CHANGES
 =======
 
+* Changed dockerfile to allow for standalone usage
+* Automate docker build and running topology tester
+* Added needed docker components
 * Cleaned up code to allow for packaging for docker
 * Added checker to validate config files
 * Create README.md
